{
    "name": "GameInputManager",
    "maps": [
        {
            "name": "Movement",
            "id": "f77c912a-1ec8-451e-bc97-2a6f8e66631d",
            "actions": [
                {
                    "name": "LeftRight",
                    "type": "Value",
                    "id": "b1897c1b-bbf4-438d-ba1c-6eae071ec90e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ForwardBack",
                    "type": "Value",
                    "id": "c3114de7-93e9-47d1-997b-5b2c9bd73a49",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "sprintInput",
                    "type": "Value",
                    "id": "372d9cd2-93ec-4930-abdd-a8ab0c0486ea",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "64f96085-cdf3-4803-bcb9-59ae714f70e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8570d5c2-c004-41ba-a739-b1485ad10564",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ea4c88a-203b-478e-ad7d-741cc9cfa8f3",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61571d4a-aa29-4b8e-ba42-ae01e4100ccf",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "sprintInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db222975-2664-454b-935b-aa89fc1206f1",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "e30d18af-55e1-491c-81c6-5aa91b67e9c6",
            "actions": [
                {
                    "name": "Xmove",
                    "type": "Value",
                    "id": "8eac73bf-0fe1-4330-b275-4965a7fa437e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Ymove",
                    "type": "Value",
                    "id": "f14cc737-ed19-4550-9368-f905b1a64e9f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9c4689b9-cf57-445f-95fc-7826242c205a",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Xmove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c9ee679-1d66-4196-ac92-9bafe63d1a52",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ymove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Fight",
            "id": "7f3fbdf8-f793-44be-90e7-f5605651f7f6",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "900493ca-7aa7-4c47-964f-6fac9ef40118",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "76aae71b-2967-4b5d-bf70-dd41bfc9f443",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Counter",
                    "type": "Button",
                    "id": "14de529e-94cb-47cf-ac34-c5134db3633c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DistAttack",
                    "type": "Button",
                    "id": "d1443b69-51ac-4436-be3b-ff79698ec652",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d998e2c8-34e8-4aae-b16d-529e703de005",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b593c0a0-c3fb-4c90-908d-0fb5a38cb01b",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d21d523c-12d4-4d2e-ac89-cd0c75c3da20",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Counter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64043491-e2e7-4224-a1de-0d8f8de910e7",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DistAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Running",
            "id": "8364b869-2dbd-4d48-ac5a-511efab563aa",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "d3223917-b24d-465d-99b1-62c97c7fcfd9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fa74b3da-6996-4217-835e-e411c00a7a68",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}